--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -117,7 +117,7 @@ section {
         margin-bottom: 15px;
         
         a {
-            background-color: #336699;
+            background-color: #214263;
             color: #fff;
             font-weight: 600;
             padding-top: 10px;
@@ -135,7 +135,7 @@ section {
     /* --- TEXT --- */
 
     a {
-        color: #336699;
+        color: #214263;
         font-weight: 500;
         text-decoration: none;
     }
